k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-post-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-post
  template:
    metadata:
      labels:
        component: server-post
    spec:
      containers:
        - name: server-post
          image: pedrohenriquems321/k8s:1.0.3
          ports:
            - containerPort: 8080
